--- a/http-proxy/package.json
+++ b/http-proxy/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "bench": "node bench.js --url=https://local.trendyol.com --round=1 --nginx"
+    "bench": "node bench.js"
   },
   "keywords": [],
   "author": "",
