--- a/hello-world/nodejs/package.json
+++ b/hello-world/nodejs/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "benchmarks",
+  "name": "hello-world",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "bench": "node bench.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "autocannon": "^4.4.0"
-  }
+  "dependencies": {}
 }
