--- a/hello-world/rust/Cargo.toml
+++ b/hello-world/rust/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "http-proxy"
+name = "hello_world"
 version = "0.1.0"
 authors = ["İsmail Hakkı Tekin <ihakkitekin@gmail.com>"]
 edition = "2018"
 
 [dependencies]
 hyper = "0.13.0-alpha.4"
-hyper-tls = "0.4.0-alpha.4"
 tokio = "0.2.0-alpha.6"
