Fix rust dockerfiles

--- a/hello-world/rust/Dockerfile
+++ b/hello-world/rust/Dockerfile
@@ -4,17 +4,18 @@
 
 FROM ekidd/rust-musl-builder:1.39.0 as cargo-build
 
-COPY Cargo.toml Cargo.toml
+COPY --chown=rust:rust ./Cargo.toml ./
+COPY --chown=rust:rust ./Cargo.lock ./
 
-RUN sudo mkdir -p src
+RUN mkdir -p src
 RUN sudo chown -R rust:rust /home/rust
 
 RUN echo "fn main() {println!(\"if you see this, the build broke\")}" > ./src/main.rs
 
 RUN RUSTFLAGS=-Clinker=musl-gcc cargo build --release --target=x86_64-unknown-linux-musl
 
-RUN rm -f target/x86_64-unknown-linux-musl/release/deps/http-proxy*
-RUN rm -rf src
+RUN rm -f target/x86_64-unknown-linux-musl/release/deps/hello_world*
+RUN rm -f src/main.rs
 
 COPY . .
 
@@ -26,10 +27,8 @@ RUN RUSTFLAGS=-Clinker=musl-gcc cargo build --release --target=x86_64-unknown-li
 
 FROM alpine:3.10
 
-RUN apk --no-cache add ca-certificates
-
-COPY --from=cargo-build /home/rust/src/target/x86_64-unknown-linux-musl/release/http-proxy /usr/local/bin/http-proxy
+COPY --from=cargo-build /home/rust/src/target/x86_64-unknown-linux-musl/release/hello-world /usr/local/bin/hello-world
 
 EXPOSE 8080
 
-CMD ["http-proxy"]
+CMD ["hello-world"]
