--- a/hello-world/go/Dockerfile
+++ b/hello-world/go/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY . .
 
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o http-proxy .
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o hello-world .
 
 FROM alpine:3.10
 
@@ -12,8 +12,8 @@ RUN apk --no-cache add ca-certificates
 
 WORKDIR /root/
 
-COPY --from=builder /app/http-proxy .
+COPY --from=builder /app/hello-world .
 
 EXPOSE 8080
 
-CMD ["./http-proxy"]
+CMD ["./hello-world"]
