--- a/hello-world/rust/Cargo.toml
+++ b/hello-world/rust/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hello_world"
+name = "hello-world"
 version = "0.1.0"
 authors = ["İsmail Hakkı Tekin <ihakkitekin@gmail.com>"]
 edition = "2018"
