--- a/hello-world/docker-compose.yaml
+++ b/hello-world/docker-compose.yaml
@@ -1,20 +1,20 @@
 version: '3.1'
 services:
-  rust:
+  rust-hyper:
     build:
-      context: rust
+      context: rust/hyper
       dockerfile: Dockerfile
     ports:
       - ${RUST_PORT}:8080
-  go:
+  go-std:
     build:
-      context: go
+      context: go/std
       dockerfile: Dockerfile
     ports:
       - ${GO_PORT}:8080
-  nodejs:
+  javascript-nodejs:
     build:
-      context: nodejs
+      context: javascript/nodejs
       dockerfile: Dockerfile
     ports:
       - ${NODEJS_PORT}:8080
