--- a/http-proxy/docker-compose.yaml
+++ b/http-proxy/docker-compose.yaml
@@ -1,24 +1,24 @@
 version: '3.1'
 services:
-  rust:
+  rust-hyper:
     build:
-      context: rust
+      context: rust/hyper
       dockerfile: Dockerfile
     ports:
       - ${RUST_PORT}:8080
     environment:
       PROXY_URL: ${PROXY_URL} # with http/https
-  go:
+  go-std:
     build:
-      context: go
+      context: go/std
       dockerfile: Dockerfile
     ports:
       - ${GO_PORT}:8080
     environment:
       PROXY_URL: ${PROXY_URL} # with http/https
-  nodejs:
+  javascript-nodejs:
     build:
-      context: nodejs
+      context: javascript/nodejs
       dockerfile: Dockerfile
     ports:
       - ${NODEJS_PORT}:8080
