Add running multiple benchmrks

--- a/tools/bench/bench.config.json
+++ b/tools/bench/bench.config.json
@@ -3,5 +3,6 @@
   "duration": 15,
   "connections": 1000,
   "roundByRoundResults": false,
-  "warmUp": true
+  "warmUp": true,
+  "cooldown": true
 }
