--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "bench": "node ./tools/bench/bench.js"
+    "bench": "node ./tools/bench/run.js"
   },
   "dependencies": {
     "autocannon": "^4.4.0",
