--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "autocannon": "^4.4.0",
     "lodash": "^4.17.15",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^0.5.1",
+    "mustache": "^3.1.0",
+    "opener": "^1.5.1"
   }
 }
