Change metrics location to final results

--- a/tools/bench/bench.config.json
+++ b/tools/bench/bench.config.json
@@ -3,7 +3,7 @@
   "duration": 10,
   "connections": 100,
   "roundByRoundResults": true,
-  "warmUp": false,
+  "warmUp": true,
   "cooldown": true,
   "resources": {
     "cpus": "1",
